# goit-pythonweb-hw-06

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: database.py  logger.py  models.py  my_select.py  seed.py  services.py
goit_pythonweb_hw_06/: models.py
migrations/: env.py
tests/: test_my_select.py
