[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Aleksieiev",email = "reneguarde@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "asyncio (>=3.4.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
